Add support for apugli:prevent_sound

--- a/15/powers.yaml
+++ b/15/powers.yaml
@@ -3745,6 +3745,7 @@ links:
                   - apugli:edible_item
                   - apugli:energy_swirl
                   - apugli:mobs_ignore
+                  - apugli:prevent_sound
 
                   - $Eggolib
 
@@ -5382,6 +5383,32 @@ links:
                         bientity_condition:
                             desc: If set, mobs will ignore the entity with this power if they and the entity meet this condition.
                             link: bi_entity_cond
+                    string-apugli:prevent_sound:
+                        category:
+                            desc: If specified, all sound events from this category will be prevented from being heard by the entity that has the power.
+                            enum: ['ambient', 'blocks', 'hostile', 'master', 'music', 'neutral', 'players', 'records', 'voice', 'weather']
+                        categories:
+                            desc: If specified, all sound events from these categories will be prevented from being heard by the entity that has the power. Can accept "ambient", "blocks", "hostile", "master", "music", "neutral", "players", "records", "voice" and "weather".
+                            type: list
+                            vals:
+                                type: string
+                                allow: '*a-z0-9_\/:.-'
+                        sound:
+                            desc: If specified, this sound event will be prevented from being heard by the entity that has the power.
+                            type: string
+                            allow: '*a-z0-9_\/:.-'
+                        sounds:
+                            desc: If specified, these sound events will be prevented from being heard by the entity that has the power.
+                            type: list
+                            vals:
+                                type: string
+                                allow: '*a-z0-9_\/:.-'
+                        whitelist:
+                            desc: If specified, these sound events will be exempt from being prevented.
+                            type: list
+                            vals:
+                                type: string
+                                allow: '*a-z0-9_\/:.-'
                     string-eggolib:crawling: {}
                     string-origins-math:attribute_like_resource:
                         min:
